--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div>
         <h2>Favorite Movies</h2>
         <p>This is a list of my Favorite Movies</p>
-        <img src="https://m.media-amazon.com/images/M/MV5BMTcxNTQ1MzAyOF5BMl5BanBnXkFtZTYwNDg0ODk4._V1_FMjpg_UX1000_.jpg" alt="Favorite movie John Q">
+        <img src="./John Q Poster.jpg" alt="Favorite movie John Q">
         <ul>
             <li>John Q</li>
             <li>Training Day</li>
